--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
       run: |
         sudo apt update
         sudo apt update
-sudo apt install -y python3 python3-pip python3-setuptools \build-essential ccache libffi-dev libssl-dev git zip unzip openjdk-17-jdk \libsqlite3-dev zlib1g-dev sudo apt install -y python3-venv python3 -m ensurepip --upgrade
+        sudo apt install -y python3 python3-pip python3-setuptools \
+        build-essential ccache libffi-dev libssl-dev git zip unzip openjdk-17-jdk 
+        \libsqlite3-dev zlib1g-dev 
+        sudo apt install -y python3-venv python3 -m ensurepip --upgrade
 
     - name: Install build tools
       run: |
