--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,10 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt update
         sudo apt install -y python3 python3-pip python3-setuptools \
-        build-essential ccache libffi-dev libssl-dev git zip unzip openjdk-17-jdk 
-        \libsqlite3-dev zlib1g-dev 
-        sudo apt install -y python3-venv python3 -m ensurepip --upgrade
+        build-essential ccache libffi-dev libssl-dev git zip unzip openjdk-17-jdk \
+        libsqlite3-dev zlib1g-dev python3-venv
+        python3 -m ensurepip --upgrade
 
     - name: Install build tools
       run: |
@@ -36,3 +35,4 @@ jobs:
       with:
         name: app-debug-apk
         path: bin/*.apk
+
