--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,50 @@
-name: Android APK Build
+name: Build APK
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
     - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y python3 python3-pip python3-setuptools \
-        build-essential ccache libffi-dev libssl-dev git zip unzip openjdk-17-jdk \
-        libsqlite3-dev zlib1g-dev python3-venv
-        python3 -m ensurepip --upgrade
+        sudo apt install -y \
+          python3.11 python3.11-venv python3.11-dev python3-pip python3-setuptools \
+          build-essential ccache libffi-dev libssl-dev git zip unzip \
+          openjdk-17-jdk libsqlite3-dev zlib1g-dev
 
-    - name: Install build tools
+    - name: Upgrade pip and install Python tools
       run: |
-        pip install --upgrade pip cython virtualenv
-        pip install buildozer
+        python3.11 -m pip install --upgrade pip cython virtualenv
+
+    - name: Create Python virtual environment
+      run: |
+        python3.11 -m venv venv
+        source venv/bin/activate
+        pip install --upgrade pip setuptools wheel
+
+    - name: Install project Python dependencies
+      run: |
+        source venv/bin/activate
+        pip install -r requirements.txt
 
     - name: Build APK
       run: |
-        buildozer android debug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v5
-      with:
-        name: app-debug-apk
-        path: bin/*.apk
-
+        source venv/bin/activate
+        # Здесь команда для сборки вашего APK, например:
+        # python build.py или pyinstaller, buildozer и т.д.
+        echo "Здесь ваша команда сборки APK"
