--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Upgrade pip and install Python tools
       run: |
-        python -m pip install --upgrade pip cython virtualenv
+        python -m pip install --upgrade pip cython virtualenv buildozer
 
     - name: Create Python virtual environment
       run: |
@@ -42,9 +42,11 @@ jobs:
         pip install -r requirements.txt
 
     - name: Accept Android SDK licenses
-      run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-        
+      run: |
+        yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+
     - name: Build APK with Buildozer
       run: |
         source venv/bin/activate
         buildozer -v android debug
+
