--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-24.04
 
+    env:
+      ANDROID_HOME: ${{ runner.home }}/.buildozer/android/platform/android-sdk
+      PATH: ${{ runner.home }}/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -24,9 +28,9 @@ jobs:
         sudo apt update
         sudo apt install -y \
           build-essential ccache libffi-dev libssl-dev git zip unzip \
-          openjdk-17-jdk libsqlite3-dev zlib1g-dev
+          openjdk-17-jdk libsqlite3-dev zlib1g-dev curl unzip
 
-    - name: Upgrade pip and install Python tools
+    - name: Install Buildozer and Python tools
       run: |
         python -m pip install --upgrade pip cython virtualenv buildozer
 
@@ -36,22 +40,28 @@ jobs:
         source venv/bin/activate
         pip install --upgrade pip setuptools wheel
 
-    - name: Install project Python dependencies
+    - name: Install project dependencies
       run: |
         source venv/bin/activate
         pip install -r requirements.txt
 
-    - name: Install Android Build-Tools
+    - name: Install Android SDK components
       run: |
-        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;36.1.0" || true
-
-
-    - name: Accept Android SDK licenses
-      run: |
-        yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        cd $ANDROID_HOME/cmdline-tools
+        # Скачиваем cmdline-tools если их нет
+        if [ ! -d "latest" ]; then
+          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip commandlinetools.zip
+          mv cmdline-tools latest
+        fi
+        # Принимаем лицензии и устанавливаем необходимые компоненты
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;36.1.0"
 
     - name: Build APK with Buildozer
       run: |
         source venv/bin/activate
         buildozer -v android debug
 
+    buildozer -v android debug
