--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
         python-version: 3.11
 
     - name: Install system dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          build-essential ccache libffi-dev libssl-dev git zip unzip \
-          openjdk-17-jdk libsqlite3-dev zlib1g-dev curl unzip
+  run: |
+    sudo apt update
+    sudo apt install -y \
+      build-essential ccache libffi-dev libssl-dev git zip unzip tar \
+      openjdk-17-jdk libsqlite3-dev zlib1g-dev curl
 
     - name: Install Buildozer and Python tools
       run: |
